# spam-of-the-times

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint  Dockerfile  LICENSE  Makefile  README.md  app.py  gcp-serviceaccount-permissions.txt  pyproject.toml  requirements-dev.txt  requirements.txt  update-robots.zsh
.github/workflows/: new-year.yml
assets/: style.css
static/: robots.txt  sitemap.xml
