[project]
name = "spam-of-the-times"
version = "1.0.0"
description = ""
authors = [
    {name = "Scott Lee Chua", email = "scottleechua@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=2.15.0",
    "dash-bootstrap-components>=1.5.0",
    "gunicorn>=23.0.0",
    "pandas>=2.2.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.2.5",
    "pre-commit>=3.6.1",
]
