[project]
name = "spam-of-the-times"
version = "1.2.0"
description = ""
authors = [
    {name = "Scott Lee Chua", email = "scottleechua@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dash>=4.0.0",
    "dash-bootstrap-components>=1.6.0",
    "gunicorn>=25.0.0",
    "pandas>=3.0.0",
    "plotly>=6.5.0",
]

[project.optional-dependencies]
dev = [
    "jupyterlab>=4.2.5",
    "pre-commit>=3.6.1",
]
